; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_tfs_module/extr_ngx_tfs_common.c_ngx_http_tfs_generate_packet_id.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_tfs_module/extr_ngx_tfs_common.c_ngx_http_tfs_generate_packet_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_http_tfs_generate_packet_id.id = internal global i32 2, align 4
@INT_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ngx_http_tfs_generate_packet_id() #0 {
  %1 = load i32, i32* @ngx_http_tfs_generate_packet_id.id, align 4
  %2 = load i32, i32* @INT_MAX, align 4
  %3 = sub nsw i32 %2, 1
  %4 = icmp sge i32 %1, %3
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 1, i32* @ngx_http_tfs_generate_packet_id.id, align 4
  br label %6

6:                                                ; preds = %5, %0
  %7 = load i32, i32* @ngx_http_tfs_generate_packet_id.id, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @ngx_http_tfs_generate_packet_id.id, align 4
  ret i32 %8
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
